--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -1,12 +1,12 @@
 ﻿<section>
 
             <div class="content-play">
-              <p><a href="javascript:void(0)" onclick="dashangToggle()" class="dashang" title="">打赏一个呗</a></p>
+              <p><a href="javascript:void(0)" onclick="dashangToggle()" class="dashang" title="">feedback me</a></p>
               <div class="hide_box-play"></div>
               <div class="shang_box-play">
                 <a class="shang_close-play" href="javascript:void(0)" onclick="dashangToggle()" title="close"><img src="/images/payimg/close.jpg" alt="取消" /></a>
                 <div class="shang_tit-play">
-                  <p>感谢您的支持，我会继续努力的!</p>
+                  <p>Thank you, please feedback about my post!</p>
                 </div>
               <div class="shang_payimg">    
                     <img src="/images/payimg/email_qr.jpg" alt="扫码支持" title="扫一扫" />
@@ -15,9 +15,6 @@
                 <div class="shang_payselect">
                   <div class="pay_item checked" data-id="alipay">
                     <span class="pay_logo"><img src="/images/payimg/email_qr.jpg" alt="支付宝" /></span>
-                  </div>
-                  <div class="pay_item" data-id="weipay">
-                    <span class="pay_logo"><img src="/images/payimg/wechat.jpg" alt="微信" /></span>
                   </div>
                 </div>
                 <div class="shang_info-play">
